# 
#  Copyright 
# 
SUBDIRS= Mathematics \
	PreviewControl \
	ZMPRefTrajectoryGeneration \
	MotionGeneration  \
	FootTrajectoryGeneration \
	GlobalStrategyManagers 

walkGenJrldir = @includedir@/walkGenJrl
walkGenJrl_HEADERS = \
	StepStackHandler.h \
	PatternGeneratorInterface.h  \
	SimplePlugin.h \
	SimplePluginManager.h \
	PGTypes.h \
	Clock.h


