walkGenJrldir = @includedir@/walkGenJrl/MotionGeneration/
walkGenJrl_HEADERS = \
	./InverseKinematics.h \
	./StepOverPlanner.h\
	./CollisionDetector.h\
	./WaistHeightVariation.h\
	./UpperBodyMotion.h \
	./GenerateMotionFromKineoWorks.h \
	./ComAndFootRealization.h \
	./ComAndFootRealizationByGeometry.h 
